--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Lorem Ipsum - Web Developer
 description: "A blog about lorem ipsum ..."
 baseurl: "/space-jekyll-template" # the subpath of your site
-url: "http://victorvoid.github.io"
+url: "http://ulazniceprototip.github.io"
 
 # User settings
 username: lorem ipsum
